@@ -1,0 +1,3 @@
+init:
+    jsl retry_startup_init
+    rtl
