@@ -1,3 +1,0 @@
-init:
-    jsl retry_load_title_init
-    rtl
