@@ -69,7 +69,7 @@ endif
 ;=====================================
     %incsrc(code,shared)
     %incsrc("",extra)
-    %incsrc(code,load_title)
+    %incsrc(code,startup)
     %incsrc(code,fade_to_level)
     %incsrc(code,level_init_1)
     %incsrc(code,level_init_2)
