@@ -58,7 +58,7 @@
   <ul>
     <li>Copy these lines into UberASM Tool's <code>list.txt</code> file, under <code>gamemode:</code>:
       <div id="hierarchy">
-        <span class="folder"><code>03 retry_gm03.asm</code></span>
+        <span class="folder"><code>00 retry_gm00.asm</code></span>
         <span class="folder"><code>06 retry_gm06.asm</code></span>
         <span class="folder"><code>07 retry_gm07.asm</code></span>
         <span class="folder"><code>0C retry_gm0C.asm</code></span>
